2007-01-02  Hans Boehm <Hans.Boehm@hp.com>

	* alloc.c (GC_add_to_heap): Call GC_install_header(p) AFTER
	adjusting p.

2007-12-23  Hans Boehm <Hans.Boehm@hp.com>

	* Makefile.am: Add NT_X64_THREADS_MAKEFILE.
 
2007-12-23  Hans Boehm <Hans.Boehm@hp.com> (Really mostly Friedrich Dominicus)

	* NT_X64_STATIC_THREADS_MAKEFILE: Clean up obsolete comment.
	* alloc.c: Add declaration for GC_add_current_malloc_heap.
	* win32_threads.c (GC_beginthreadex): Clean up error
	return code.
	* doc/README.win64, NT_X64_THREADS_MAKEFILE, Makefile.direct:
	Add NT_X64_THREADS_MAKEFILE.

2007-12-21  Hans Boehm <Hans.Boehm@hp.com>

	* alloc.c: Define GC_version instead of in version.h.
	* version.h: Remove.
	* include/gc_version.h: Move most of version.h here.
	* include/gc.h: Include gc_version.h.
	* gcname.c, add_gc_prefix.c: include gc.h instead of version.h.
	* Makefile.direct, Makefile.dj, Makefile.am, include/include.am:
	Adjust for version.h rename.
	* Makefile.in: Regenerate.

2007-12-21  Hans Boehm <Hans.Boehm@hp.com> (Really mostly russ sludge dot net)

	* configure.ac: Put libatomic_ops links in build directory.
	* configure: Regenerate.
	* Makefile.am: Dont mention atomic_ops.c and atomic_ops_sysdeps.S
	as nodist sources.

2007-12-20  Hans Boehm <Hans.Boehm@hp.com>

	* include/gc.h, doc/README.macros: Add GC_NO_THREAD_REDIRECTS,
	GC_NO_THREAD_DECLS, don't test explicitly for GC_SOLARIS_THREADS.

2007-12-20  Hans Boehm <Hans.Boehm@hp.com>
	
	* alloc.c: Deal correctly with address wrapping for 
	GC_greatest_plausible_heap_addr and GC_least_plausible_heap_addr.
	* finalize.c, include/gc.h (GC_register_disappearing_link,
	GC_register_finalizer_inner): Improve out-of-memory handling.
	* include/private/gc_pmark.h: Fix comment spelling.

2007-12-18  Hans Boehm <Hans.Boehm@hp.com> (really mainly Peter Wang)

	* include/gc_inline.h, include/gc_tiny_fl.h: cleanups to make usable
	in other contexts.

2007-12-18  Hans Boehm <Hans.Boehm@hp.com> (really Radek Polak)
